@@ -30,9 +30,10 @@
   27. New DISABLE flags: IMC2, I3 -- alternative means to turn them off.  At runtime, it puts those systems into idle.
   28. Another DISABLE flag: NEWCHARACTERS -- used for account-based muds to turn off (or not) char creation when NEWPLAYERS (accts) are.
   29: Disguise now checks badnameslist
-  30. IndoorWaterSurface now generates IndoorUnderWaterGrid; new IndoorUnderWaterGrid, IndoorUnderWaterThinGrid, and IndoorWaterThinSurface classes
+  30. IndoorWaterSurface now generates IndoorUnderWaterGrid - would normally shy from this as a backward compatibility issue, but its an oversight.
+  31. New locales: IndoorUnderWaterGrid, IndoorUnderWaterThinGrid, and IndoorWaterThinSurface classes
   
-//TODO: export/import account/account data
+//TODO: export/import account/account data - just test!
 //TODO: make the tech install skill!!! all put/remove commands should check msg.value() for pct chance/competence
 //TODO: make components interact badly based on techlevel -- generators/batteries affect things they power, software affects controlled.
 //      this encourages equality in tech level, which will bleed out into the comparative components (weapons, shields)
